style: fix custom.scss formatting and add wg-grants class for spacing

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -26,11 +26,12 @@
 
 .media.stream-item .article-title {
   font-size: 1rem !important;
+}
 
-  .wg-grants li {
-    margin-bottom: 0.75rem !important;
-  }
+.media.stream-item .article-style {
+  font-size: 1rem !important;
+}
 
-  .media.stream-item .article-style {
-    font-size: 1rem !important;
-  }
+.wg-grants li {
+  margin-bottom: 0.75rem !important;
+}
